# helicyn

./: .env.example  .gitignore  Control Plane.html  Helicyn.html  README.md  _redirects  ambient.js  auth-callback.html  auth-callback.js  auth.js  careers.html  careers.js  control-plane.html  control.css  control.js  enhance.js  eslint.config.js  hero.js  index.html  login.html  login.js  main.js  modern.css  nav-auth.js  netlify.toml  onboarding.html  onboarding.js  open_full_helicyn_stack.command  open_helicyn_dashboard.command  package.json  partner-portal.html  partner-portal.js  partner.css  partners.html  patch-notes.css  patch-notes.html  playwright.config.ts  pnpm-lock.yaml  premium.css  premium.js  (+16 more)
helicyn-ml/: .gitignore  README.md  pyproject.toml
helicyn-ml/configs/: datasets.yaml  demo_recommendation.yaml  split.yaml  train_policy_ranker.yaml  train_power_predictor.yaml  train_resource_predictor.yaml  train_runtime_predictor.yaml  train_sla_risk_model.yaml  train_workload_forecaster.yaml
helicyn-ml/docs/: dataset_downloads.md  datasets.md  evaluation.md  google_cpu_memory_preprocessed.md  limitations.md  model_design.md  normalized_schema.md  policy_design.md  simulator_integration.md  training_pipeline.md
helicyn-ml/examples/: fleet_state_example.json  recommendation_example.json
helicyn-ml/helicyn_ml/: __init__.py  __main__.py  cli.py  config.py
helicyn-ml/tests/: test_cli_no_manual_github.py  test_constraint_checker.py  test_dataset_registry.py  test_downloaders.py  test_feature_engineering.py  test_model_save_load.py  test_normalization.py  test_policy_interface.py  test_readiness.py  test_reproducibility.py  test_resource_datasets.py  test_schemas.py  test_splits.py  test_training_smoke.py
helicyn-sim/: .gitignore  README.md  pyproject.toml
helicyn-sim/configs/: ablation.yaml  before_after.yaml  demo.yaml  research_matrix.yaml  sensitivity.yaml  trace_replay.yaml
helicyn-sim/docs/: claims_audit.md  dashboard.md  equations.md  experimental_methodology.md  how_to_use_without_terminal.md  limitations.md  ml_integration_plan.md  model_assumptions.md  phase2_external_helicyn.md  (+1 more)
(+304 files in other folders)
