[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "helicyn-ml"
version = "0.1.0"
description = "Helicyn ML: a real machine-learning control prototype for data-center workload, energy, carbon, price, and thermal-aware scheduling."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Helicyn" }]

dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "pyarrow>=14.0",
    "pydantic>=2.5",
    "scikit-learn>=1.3",
    "joblib>=1.3",
    "typer>=0.9",
    "rich>=13.0",
    "pyyaml>=6.0",
    "requests>=2.31",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
serve = ["fastapi>=0.104", "uvicorn>=0.24"]
plot = ["plotly>=5.18"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "fastapi>=0.104",
    "uvicorn>=0.24",
]

[project.scripts]
helicyn-ml = "helicyn_ml.cli:app"

[tool.setuptools.packages.find]
include = ["helicyn_ml*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
